--- a/dice_throne.html
+++ b/dice_throne.html
@@ -19,11 +19,11 @@
     <section class="wrap" id="screen">
         <section id="dice-section">
             <i class="fa-solid fa-dice-six"></i>
-            <h3 id="d1">-</h3>
-            <h3 id="d2">-</h3>
-            <h3 id="d3">-</h3>
-            <h3 id="d4">-</h3>
-            <h3 id="d5">-</h3>
+            <h3 class="die" id="d1">-</h3>
+            <h3 class="die" id="d2">-</h3>
+            <h3 class="die" id="d3">-</h3>
+            <h3 class="die" id="d4">-</h3>
+            <h3 class="die" id="d5">-</h3>
             <button id="roll-dice">Roll Dice</button>
             <button id="reset-dice">Reset</button>
         </section>
