updated js and css filenames

--- a/dice_throne.html
+++ b/dice_throne.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice Throne</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Almendra:ital,wght@0,400;0,700;1,400;1,700&family=Crete+Round:ital@0;1&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/abcc70ceac.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
-    <script src="dice_script.js" defer></script>
+    <script src="dice.js" defer></script>
 </head>
 <body>
     <header>
